<resources>
    <string name="app_name">WeBuy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Accueil-->
    <string name="TitreSection1">Chercher un produit</string>
    <string name="DescriptionSection1">Faites des recherches en selectionnant le magasin pret de chez vous.</string>
    <string name="TitreSection2">Ajouter un produit</string>
    <string name="DescriptionSection2">Vous avez trouver une promotion, partagez-la! </string>
    <string name="TitreSection3">Vos groupes d\'achat</string>
    <string name="DescriptionSection3">Consulter les groupes où vous vous êtes inscrit.</string>
    <string name="TitreSection4">Historique</string>
    <string name="DescriptionSection4">Consulter votre historique</string>

    <!-- master_bottom_navigation-->
    <string name="accueil">Accueil</string>
    <string name="achats">Vos achats</string>
    <string name="notifications">Notifications</string>
    <string name="magasins">Magasins</string>
    <string name="menu">Menu</string>

    <!--    menu-->
    <string name="menu_accueil">Accueil</string>
    <string name="menu_magasins">Magasins</string>
    <string name="menu_achats">Vos achats</string>
    <string name="menu_option">Option</string>
    <string name="menu_amis">Vos amis</string>
    <string name="menu_connection">Se connecter</string>
    <string name="menu_DarkMode">Mode nuit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    DetailPromo-->
    <string name="Join_group">Créer un groupe</string>


    <!--    amis-->
    <string name="presentation_fragment_amis">Ici, vous pouvez ajouter des amis et les inviter à rejoindre des achats groupés.</string>
    <string name="se_connecter">Se Connecter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voir_tout"><u>Voir tout</u></string>
    <string name="meilleursOffres">Les meilleurs offres</string>
    <string name="Sous_titre">Partagez pour payer moins chère.</string>

    <!-- master_bottom_navigation-->
    <string name="Home">Home</string>
    <string name="Profil">Profil</string>
    <string name="Connect">Se connecter</string>
    <string name="Magasin">Magasin</string>

    <!--    Connexion-->
    <string name="titreConnection">"Connexion"</string>
    <string name="inscrire"><u>"Pas encore de compte ? Inscrivez-vous"</u></string>

    <!--    Inscription-->
    <string name="titreInscription">"Inscription"</string>
    <string name="prénom">"Prénom"</string>
    <string name="Nom">"Nom"</string>
    <string name="déjàInscrit"><u>"Déjà inscrit ? Connectez-vous"</u></string>
    <string name="presentation_fragment_achats">Ici, vous pouvez consulter les groupes que vous avez rejoint.</string>

</resources>
