<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationMenu"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu" />

    <item
        android:id="@+id/navigationMagasins"
        android:icon="@drawable/ic_magasins"
        android:title="@string/magasins" />

    <item
        android:id="@+id/navigationAccueil"
        android:icon="@drawable/ic_accueil"
        android:title="@string/accueil" />

    <item
        android:id="@+id/navigationAchats"
        android:icon="@drawable/ic_achats"
        android:title="@string/achats" />

    <item
        android:id="@+id/navigationNotifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

</menu>
