<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.webuy.ui.accueil.AccueilFragment"
        android:label="@string/menu_accueil"
        tools:layout="@layout/fragment_accueil" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.webuy.ui.magasins.MagasinsFragment"
        android:label="@string/menu_magasins"
        tools:layout="@layout/fragment_magasins" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.webuy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_achats"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.webuy.ui.tools.ToolsFragment"
        android:label="@string/menu_option"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.webuy.ui.share.ShareFragment"
        android:label="@string/menu_amis"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.webuy.ui.send.SendFragment"
        android:label="@string/menu_connection"
        tools:layout="@layout/fragment_send" />
</navigation>