<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_log_sign"></include>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:paddingTop="130dp"
        android:background="@color/contentBodyColor">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titreConnection"
            android:textColor="@color/gradientViolet"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="80dp"/>

        <EditText
            android:id="@+id/identifiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/gradientViolet"
            android:textColor="@color/gradientViolet"
            android:backgroundTint= "@color/gradientViolet"
            />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gradientViolet"
            android:hint="@string/prompt_password"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:textColor="@color/gradientViolet"
            android:backgroundTint= "@color/gradientViolet"
            />

        <Button
            android:id="@+id/se_connecter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_inscription"
            android:padding="15dp"
            android:text="Se connecter"
            android:textColor="@color/text_btn" />

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscrire"
            android:textColor="@color/gradientViolet"
            android:textAlignment="center"
            android:textStyle="bold"
            android:clickable="true"
            />


    </LinearLayout>a

</androidx.constraintlayout.widget.ConstraintLayout>