<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gl="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appsnipp.schooleducation.MainActivity"
    tools:showIn="@layout/app_bar_main"
    style="@style/parent.contentLayout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--Example with RelativeLayout and Gradient Drawable -->
            <!-- for Recycler view use any of the layout as model-->

            <TextView
                style="@style/viewParent.headerText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    android:background="@drawable/home_gradient_maths"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewSub1Title"
                        style="@style/viewParent.headerText.HomeCardTitle"
                        android:layout_width="253dp"
                        android:layout_height="wrap_content"
                        android:text="@string/TitreSection1"
                        android:textSize="23dp" />

                    <TextView
                        style="@style/viewParent.headerText.homeCardContent"
                        android:layout_width="237dp"
                        android:layout_height="67dp"
                        android:layout_below="@id/textViewSub1Title"
                        android:text="@string/DescriptionSection1" />

                    <ImageView
                        style="@style/homeCardImage"
                        android:layout_width="93dp"
                        android:layout_height="68dp"
                        android:maxHeight="90dp"
                        android:src="@drawable/caddie" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <!--if the second one is used as model for recyclerView, refer:
            https://appsnipp.com/gradient-layout-for-dynamic-gradients-in-android-without-drawable-library/
            -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginTop="10dp">

                <net.colindodd.gradientlayout.GradientRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    gl:start_color="@color/gradientOrange"
                    gl:end_color="@color/gradientOrange1"
                    gl:orientation="LEFT_RIGHT"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewSub2Title"
                        android:text="@string/TitreSection2"
                        style="@style/viewParent.headerText.HomeCardTitle"

                        />

                    <TextView
                        style="@style/viewParent.headerText.homeCardContent"
                        android:layout_width="237dp"
                        android:layout_height="67dp"
                        android:layout_below="@id/textViewSub2Title"
                        android:text="@string/DescriptionSection2" />

                    <ImageView
                        android:layout_width="93dp"
                        android:layout_height="68dp"
                        android:maxHeight="90dp"
                        android:src="@drawable/add"
                        style="@style/homeCardImage" />

                </net.colindodd.gradientlayout.GradientRelativeLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginTop="10dp">

                <net.colindodd.gradientlayout.GradientRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    gl:end_color="@color/gradientOrange1"
                    gl:start_color="@color/gradientOrange2"
                    gl:orientation="LEFT_RIGHT"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewSub3Title"
                        android:text="@string/TitreSection3"
                        style="@style/viewParent.headerText.HomeCardTitle" />

                    <TextView
                        style="@style/viewParent.headerText.homeCardContent"
                        android:layout_width="237dp"
                        android:layout_height="67dp"
                        android:layout_below="@id/textViewSub3Title"
                        android:text="@string/DescriptionSection3" />

                    <ImageView
                        style="@style/homeCardImage"
                        android:layout_width="93dp"
                        android:layout_height="68dp"
                        android:maxHeight="90dp"
                        android:src="@drawable/groupe" />

                </net.colindodd.gradientlayout.GradientRelativeLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginTop="10dp">

                <net.colindodd.gradientlayout.GradientRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    gl:end_color="@color/gradientOrange3"
                    gl:orientation="LEFT_RIGHT"
                    gl:start_color="@color/gradientOrange2">

                    <TextView
                        android:id="@+id/textViewSub4Title"
                        style="@style/viewParent.headerText.HomeCardTitle"
                        android:text="@string/TitreSection4" />

                    <TextView
                        style="@style/viewParent.headerText.homeCardContent"
                        android:layout_width="325dp"
                        android:layout_height="66dp"
                        android:layout_below="@id/textViewSub4Title"
                        android:text="@string/DescriptionSection4" />

                    <ImageView
                        style="@style/homeCardImage"
                        android:layout_width="93dp"
                        android:layout_height="68dp"
                        android:maxHeight="90dp"
                        android:src="@drawable/historique" />

                </net.colindodd.gradientlayout.GradientRelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
