<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_sign_in">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:paddingTop="130dp"
        android:background="#2B283D">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titreInscription"
            android:textColor="#E91E63"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="80dp"/>


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="200 dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/firstNameTxt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prénom"
                    android:textColor="#7E7E7E" />

                <TextView
                    android:id="@+id/NameTxt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Nom"
                    android:textColor="#7E7E7E" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="150dp"
                    android:layout_height="31dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="150dp"
                    android:layout_height="31dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#7E7E7E"
            android:text="@string/prompt_email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textEmailAddress" />



        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#7E7E7E"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/connect"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Se connecter"
            android:textColor="#2B283D"
            android:background="@drawable/btn_inscription"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:textColor="#E91E63"
            android:textAlignment="center"
            android:textStyle="bold"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>