<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity2">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:paddingTop="130dp"
        android:background="#2B283D">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titreConnection"
            android:textColor="#E91E63"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="80dp"/>




        <EditText
            android:id="@+id/identifiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_email"
            android:textColorHint="#7E7E7E"
            android:textColor="#7E7E7E"
            />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#7E7E7E"
            android:hint="@string/prompt_password"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:textColor="#7E7E7E"
            />

        <Button
            android:id="@+id/button2"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Se connecter"
            android:textColor="#2B283D"
            android:background="@drawable/btn_inscription"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:textColor="#E91E63"
            android:textAlignment="center"
            android:textStyle="bold"
            />


    </LinearLayout>a

</androidx.constraintlayout.widget.ConstraintLayout>